# Meu-2-projeto

./: README.md  app.py  dados_alterados.csv  dicionario.txt  pyproject.toml
pages/: 2_🔒Dados do sistema.py
